--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.box{
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  text-align: center;
+  transition: background-color 0.7s ease-out;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+background-color: black;
+color:white;
+border:2px solid white;
+font-size:20px;
+padding:14px 40px;
+border-radius:20px;
+text-align:center;
+margin:auto;
+position:center;
+display:flex;
+display:grid;
+transition-duration:0.4s;
+width:40%;
+}
+button:hover{
+  background-color:white;
+  color:black;
+  border:2px solid black;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+    text-align:center;
+
+    font-size: 29pt;
+    background: linear-gradient(45deg,#FF0000,#FF7F00,#FFFF00,#00FF00,#0000FF,#4B0082,#8B00FF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 400% 400%;
+
+    -webkit-animation: rainbowanim 10s ease infinite;
+       -moz-animation: rainbowanim 10s ease infinite;
+            animation: rainbowanim 10s ease infinite;
+}
+
+@-webkit-keyframes rainbowanim {
+    0%{background-position:0% 50%}
+    50%{background-position:150% 50%}
+    400%{background-position:0% 50%}
+}
+@-moz-keyframes rainbowanim {
+    0%{background-position:0% 50%}
+    50%{background-position:150% 50%}
+    400%{background-position:0% 50%}
+}
+@keyframes rainbowanim {
+    0%{background-position:0% 50%}
+    50%{background-position:150% 50%}
+    400%{background-position:0% 50%}
+}
+
+
+input{
+  display: block;
+  margin : 0 auto;
 }
