--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .box {
   align-items: center;
   justify-content: center;
@@ -19,7 +38,7 @@ button {
   display: flex;
   display: grid;
   transition-duration: 0.4s;
-  width: 40%;
+  width: 30%;
 }
 button:hover {
   background-color: white;
